QC-162: Added debug & fake flies check to cognigram smoke test

--- a/eSourcePlatform/Cognigram_/Cognigram_.csproj
+++ b/eSourcePlatform/Cognigram_/Cognigram_.csproj
@@ -217,6 +217,30 @@
       <UserCode>true</UserCode>
       <id>ad677b4a-3162-405c-8931-3348488cea63</id>
     </Compile>
+    <Compile Include="debugHTML.cs">
+      <BoundTo>e961928b-7c5a-4033-8ca3-c7ddda7efa91</BoundTo>
+      <DependentUpon>debugHTML.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>1690765b-3c0c-4347-81bb-b1f561dc4199</id>
+    </Compile>
+    <Compile Include="debugHTML.UserCode.cs">
+      <BoundTo>e961928b-7c5a-4033-8ca3-c7ddda7efa91</BoundTo>
+      <DependentUpon>debugHTML.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>38b63ff2-c9f3-47bd-a6cb-c8daf2d8c0f4</id>
+    </Compile>
+    <Compile Include="FakeHTML.cs">
+      <BoundTo>b94f60db-2fbc-4d42-972b-ebc18ddb8c52</BoundTo>
+      <DependentUpon>FakeHTML.rxrec</DependentUpon>
+      <RecorderCode>true</RecorderCode>
+      <id>83480980-f709-4738-8445-b2df5ed67f08</id>
+    </Compile>
+    <Compile Include="FakeHTML.UserCode.cs">
+      <BoundTo>b94f60db-2fbc-4d42-972b-ebc18ddb8c52</BoundTo>
+      <DependentUpon>FakeHTML.rxrec</DependentUpon>
+      <UserCode>true</UserCode>
+      <id>d1facdb5-a005-4440-a5d5-16a0c337302c</id>
+    </Compile>
     <Compile Include="HTSTSValidation.cs">
       <BoundTo>abaf1094-caf6-4592-81e6-ccc898a643d7</BoundTo>
       <DependentUpon>HTSTSValidation.rxrec</DependentUpon>
@@ -334,6 +358,16 @@
       <BoundTo>592f0892-f004-4620-9280-a638f008c2ab</BoundTo>
       <id>9a5bfd92-a229-432b-937d-e226df5e7db8</id>
       <recordtableid>28285a0f-ebc0-49cf-b3dd-89ef24e7b8d8</recordtableid>
+    </None>
+    <None Include="debugHTML.rxrec">
+      <BoundTo>592f0892-f004-4620-9280-a638f008c2ab</BoundTo>
+      <id>e961928b-7c5a-4033-8ca3-c7ddda7efa91</id>
+      <recordtableid>20248fde-466c-4799-bee7-daf873efa51e</recordtableid>
+    </None>
+    <None Include="FakeHTML.rxrec">
+      <BoundTo>592f0892-f004-4620-9280-a638f008c2ab</BoundTo>
+      <id>b94f60db-2fbc-4d42-972b-ebc18ddb8c52</id>
+      <recordtableid>da910cdb-ba4f-4be8-ad22-228d96dcd8fa</recordtableid>
     </None>
     <None Include="HTSTSValidation.rxrec">
       <BoundTo>592f0892-f004-4620-9280-a638f008c2ab</BoundTo>
